[package]
name = "project1"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.1"
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
rs-wordle-solver = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full", "net"] }
tokio-rustls = "0.26.4"
