[package]
name = "project1"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
native-tls = "0.2.18"
rs-wordle-solver = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full", "net"] }
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.18", features = ["compat"] }
